--- a/app/src/main/res/layout/message_item_layout.xml
+++ b/app/src/main/res/layout/message_item_layout.xml
@@ -33,14 +33,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/date">
 
-        <LinearLayout android:id="@+id/thumbnail"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="1dip"
             android:layout_alignParentLeft="true"
             android:layout_marginRight="0dp">
             <ImageView
-                android:id="@+id/gasImagem"
+                android:id="@+id/thumbnail"
                 android:contentDescription="cover"
                 android:layout_width="40dip"
                 android:layout_height="40dip"
