--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,16 @@
         android:id="@+id/conversationList"
         android:name="ca.uqac.programmationmobile.messages.ui.fragments.ConversationList"
         android:label="fragment_conversation_list"
-        tools:layout="@layout/fragment_conversation_list" />
+        tools:layout="@layout/fragment_conversation_list" >
+        <action
+            android:id="@+id/action_conversationList_to_conversation3"
+            app:destination="@id/conversation3">
+            <argument
+                android:name="conversationId"
+                app:argType="string"
+                android:defaultValue="NONE"/>
+        </action>
+    </fragment>
     <fragment
         android:id="@+id/friends"
         android:name="ca.uqac.programmationmobile.messages.ui.fragments.Friends"
@@ -20,4 +29,8 @@
         android:name="ca.uqac.programmationmobile.messages.ui.fragments.Profile"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/conversation3"
+        android:name="ca.uqac.programmationmobile.messages.ui.fragments.Conversation"
+        android:label="Conversation" />
 </navigation>
