--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
                 app:argType="string"
                 android:defaultValue="NONE"/>
         </action>
+        <action
+            android:id="@+id/action_conversationList_to_createConversation"
+            app:destination="@id/createConversation" />
     </fragment>
     <fragment
         android:id="@+id/friends"
@@ -33,4 +36,18 @@
         android:id="@+id/conversation3"
         android:name="ca.uqac.programmationmobile.messages.ui.fragments.Conversation"
         android:label="Conversation" />
+    <fragment
+        android:id="@+id/createConversation"
+        android:name="ca.uqac.programmationmobile.messages.ui.fragments.CreateConversation"
+        android:label="fragment_create_conversation"
+        tools:layout="@layout/fragment_create_conversation" >
+        <action
+            android:id="@+id/action_createConversation_to_conversation3"
+            app:destination="@id/conversation3">
+            <argument
+                android:name="conversationId"
+                app:argType="string"
+                android:defaultValue="NONE"/>
+        </action>
+    </fragment>
 </navigation>
