--- a/app/src/main/res/layout/friend_item_layout.xml
+++ b/app/src/main/res/layout/friend_item_layout.xml
@@ -22,7 +22,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
